Improvements to awsome class.. I have to fix the image and text alignment, but the sentering of them in the page is good now

--- a/style.css
+++ b/style.css
@@ -36,12 +36,10 @@ html, body{
     text-align: -webkit-match-parent;
 }
 .awesome{
-    background-color: rgb(20, 40, 55);
-    padding: 10px;
-    width: 100%;
     height: 25%;
     display: flex;
-    padding: 50px;
+    margin-left: 15%;
+    margin-right: 15%;
     justify-content: space-between;
     flex-direction: row;
     align-items: center;
@@ -53,9 +51,9 @@ html, body{
    
 }
 .awesome img{ /* I think this might not work... change to aw_img class? */
-    width: 60%;
+    width: 70%;
     height: 100%;
-    overflow: hidden;
+    
     /* padding: 10px;
     margin-right: 50px; */
 
